# dump_google_calendar

./: .gitignore  README.md  dump_google_calendar.py  pyproject.toml
src/dump_google_calendar/: __init__.py
