[project]
name = "dump-google-calendar"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Masayuki Sunahara", email = "tamanishi@gmail.com" }
]
dependencies = ["python-dateutil~=2.8.2", "google-api-python-client~=2.87.0", "google-auth-oauthlib~=1.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
